--- a/ecom.css
+++ b/ecom.css
@@ -20,7 +20,7 @@ body {
 
 /* Root Variables */
 :root {
-  --primary-color: #ff3c78;
+  --primary-color: rgb(131, 112, 8);
   --light-black: rgba(0, 0, 0, 0.89);
   --black: #000;
   --white: #fff;
@@ -97,7 +97,34 @@ body {
   align-items: center;
   height: 64px;
 }
+.navbar-container {
+  position: relative;
+}
+
+.navbar-container .logo {
+  position: absolute;
+  left: 45%;
+  transform: translateX(-45%);
+}
+
+@media (max-width: 768px) {
+  .navbar-container .logo {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+  }
+  .navbar-container .logo img {
+    position: static; /* or remove any absolute positioning */
+    margin: 0 auto;
+  }
+}
+
+
+
 .navbar img {
+  float: right;
+  margin-top: 5%;
+  scale: 0.4;
   margin-left: 3rem;
 }
 .menu-items {
@@ -121,6 +148,7 @@ body {
   content: "";
   position: absolute;
   background: var(--primary-color);
+  color: rgb(131, 112, 8);
   height: 3px;
   width: 0;
   left: 0;
@@ -197,6 +225,9 @@ body {
     font-weight: 500;
   }
   .navbar-container .logo img {
+    margin-left: 500px;
+    margin-right: auto;
+    height: 50px;
     position: absolute;
     top: 10px;
     right: 15px;
@@ -476,18 +507,18 @@ body {
   margin-top: 5px;
   font-size: 14px;
   text-transform: uppercase;
-  background-color: #f05e8a;
+  background-color: rgb(131, 112, 8);
   color: var(--white);
   border: none;
   border-radius: 15px;
   font-weight: 500;
-  border: 1px solid #f05e8a;
+  border: 1px solid;
   cursor: pointer;
   transition: background 0.5s ease;
 }
 .buy-now button:hover {
-  background-color: var(--white);
-  color: #f05e8a;
+  background-color: white;
+  color: rgb(131, 112, 8);
 }
 
 /* Footer */
@@ -705,3 +736,16 @@ iframe {
     padding-top: 40px;
   }
 }
+
+.content_1 #azc{
+  float: left;
+  margin-right: 100%;
+  padding-left: 0%;
+  margin-right: auto;
+  filter:invert();
+}
+
+.form-details input{
+  border-radius: 0%;
+}
+
